This is the cleanup version of the tenant server code
